--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <a href="https://wa.me/9779800000000" target="_blank" class="text-indigo-600 hover:text-indigo-800 text-2xl">
         <i class="fab fa-whatsapp"></i>
       </a>
-      <a href="https://www.tiktok.com/@jitendra_tharu" target="_blank" class="text-indigo-600 hover:text-indigo-800 text-2xl">
+      <a href="https://www.tiktok.com/@jiten14ry" target="_blank" class="text-indigo-600 hover:text-indigo-800 text-2xl">
         <i class="fab fa-tiktok"></i>
       </a>
     </div>
