--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jitendra Tharu | IT Expert</title>
+  <link rel="shortcut icon" href="websitecover.jpg" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <script src="https://unpkg.com/scrollreveal"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -181,7 +182,7 @@
       <a href="https://www.linkedin.com/in/jitendra-tharu-10354231a/" target="_blank" class="text-indigo-600 hover:text-indigo-800 text-2xl">
         <i class="fab fa-linkedin"></i>
       </a>
-      <a href="https://wa.me/9779800000000" target="_blank" class="text-indigo-600 hover:text-indigo-800 text-2xl">
+      <a href="https://wa.me/9779810428136" target="_blank" class="text-indigo-600 hover:text-indigo-800 text-2xl">
         <i class="fab fa-whatsapp"></i>
       </a>
       <a href="https://www.tiktok.com/@jeeten14ry" target="_blank" class="text-indigo-600 hover:text-indigo-800 text-2xl">
